post-submission commit

--- a/notebooks/Results_Final.ipynb
+++ b/notebooks/Results_Final.ipynb
@@ -294,18 +294,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "receptive field size\n",
+    "#receptive field size\n",
     "deep = 601\n",
     "shallow = 609\n",
     "linear =  600\n",
-    "deep smac = 183\n",
-    "shallow smac = 368\n",
+    "deep_smac = 183\n",
+    "shallow_smac = 368\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = load_data_frame('data/models/pytorch/auto-diag/final-smac-dense-fixed/')\n",
+    "df = df[df.finished == 1]\n",
+    "df = df.fillna('-')\n",
+    "df.runtime = pd.to_timedelta(np.round(df.runtime), unit='s')\n",
+    "df = df[(df.test_on_eval == 1) & (df.n_folds == 5)]\n",
+    "df = remove_columns_with_same_value(df)\n",
+    "print(len(df))\n",
+    "df = df.rename(columns=dict(shrink_the_spikes='shrink',\n",
+    "                            channel_standardize='chan_std',\n",
+    "                            low_cut_hz='low_hz',\n",
+    "                            max_abs_val='max_val',\n",
+    "                            high_cut_hz='high_hz',\n",
+    "                            moving_demean='m_mean',\n",
+    "                            moving_standardize='m_std')).drop(['train_loss', 'valid_loss',\n",
+    "                                                       'test_loss', 'valid_misclass', 'seed',\n",
+    "                                                       ], axis=1)\n",
+    "#df = df.drop(['save_predictions', 'n_chan_factor',\n",
+    "#             'n_start_chans', 'final_conv_length'], axis=1)\n",
+    "\n",
+    "print(len(df))\n",
+    "df"
    ]
   },
   {
@@ -337,6 +364,32 @@
     "\n",
     "print(len(df))\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in ('test_misclass', 'test_sensitivity', 'test_specificity', 'test_sample_misclass'):\n",
+    "    val = np.mean(df[(df.model_name == 'deep')][key]) * 100\n",
+    "    if 'misclass' in key:\n",
+    "        val = 100 - val\n",
+    "    print(np.round(val,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in ('test_misclass', 'test_sensitivity', 'test_specificity', 'test_sample_misclass'):\n",
+    "    val = np.mean(df[(df.model_name == 'shallow')][key]) * 100\n",
+    "    if 'misclass' in key:\n",
+    "        val = 100 - val\n",
+    "    print(np.round(val,1))"
    ]
   },
   {
