--- a/notebooks/Results_SMAC.ipynb
+++ b/notebooks/Results_SMAC.ipynb
@@ -412,7 +412,13 @@
     "                                                       'test_loss', 'valid_misclass',\n",
     "                                                       ], axis=1)\n",
     "df.test_misclass = df.test_misclass * 100\n",
-    "\n",
+    "plt.plot(np.array(df.test_misclass), linestyle='', marker='o')\n",
+    "plt.xlabel('Run', fontsize=16)\n",
+    "plt.ylabel('Misclassification [%]', fontsize=16)\n",
+    "plt.ticklabel_format(axis='both', which='major', labelsize=20)\n",
+    "plt.ticklabel_format(axis='both', which='minor', labelsize=20)\n",
+    "[tick.label.set_fontsize(14) for tick in (\n",
+    "    plt.gca().xaxis.get_major_ticks() + plt.gca().yaxis.get_major_ticks())];\n",
     "df = mean_identical_exps(df,result_cols)\n",
     "print(len(df))"
    ]
@@ -541,7 +547,13 @@
     "                                                       'test_loss', 'valid_misclass',\n",
     "                                                       ], axis=1)\n",
     "df.test_misclass = df.test_misclass * 100\n",
-    "\n",
+    "plt.plot(np.array(df.test_misclass), linestyle='', marker='o')\n",
+    "plt.xlabel('Run', fontsize=16)\n",
+    "plt.ylabel('Misclassification [%]', fontsize=16)\n",
+    "plt.ticklabel_format(axis='both', which='major', labelsize=20)\n",
+    "plt.ticklabel_format(axis='both', which='minor', labelsize=20)\n",
+    "[tick.label.set_fontsize(14) for tick in (\n",
+    "    plt.gca().xaxis.get_major_ticks() + plt.gca().yaxis.get_major_ticks())];\n",
     "df = mean_identical_exps(df,result_cols)\n",
     "print(len(df))"
    ]
@@ -565,11 +577,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.mean(remove_columns_with_same_value(df[(df.split_first_layer == 1.0) \n",
+    "                                 & (df.n_filters_time == 24.0) &\n",
+    "                                 (df.n_filters_spat == 73) &\n",
+    "                                 (np.round(df.drop_prob,6) == 0.328794) &\n",
+    "                                 (df.conv_nonlin == 'identity')]).test_misclass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(0.12+0.18+0.16666+0.12+0.1666+0.0933333+0.14666+0.146666 + 0.15333) / 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df[(df.split_first_layer == 1.0) \n",
     "                                 & (df.n_filters_time == 24.0) &\n",
     "                                 (df.n_filters_spat == 73) &\n",
     "                                 (np.round(df.drop_prob,6) == 0.328794) &\n",
     "                                 (df.conv_nonlin == 'identity')].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_columns_with_same_value(df[(df.pool_mode == \"max\") & \n",
+    "                                 (np.round(df.drop_prob,6) == 0.770361)])"
    ]
   },
   {
