--- a/notebooks/plots/Confusion Matrices.ipynb
+++ b/notebooks/plots/Confusion Matrices.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/6000-input', [21,24])"
+    "1 "
    ]
   },
   {
@@ -88,19 +88,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Abnormal\"), colormap=cm.Reds,\n",
-    "                           vmin=0.05, vmax=0.5);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/6000-input', [22])"
+    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/6000-input', [21,24])\n",
+    "plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Pathological\"), colormap=cm.Reds,\n",
+    "                                  class_names_fontsize=11,\n",
+    "                           vmin=0.05, vmax=0.5);\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatDeep.svg', bbox_inches='tight', dpi=600, pad_inches=0)"
    ]
   },
   {
@@ -109,8 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Abnormal\"),\n",
+    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/6000-input', [22,25])\n",
+    "fig = plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Pathological\"),\n",
     "                                 colormap=cm.Reds,\n",
+    "                                  class_names_fontsize=11,\n",
     "                           vmin=0.05, vmax=0.5);\n",
     "plt.title(\"\", fontsize=20, y=1.04)\n",
     "\n",
@@ -118,7 +112,8 @@
     "ticks = np.linspace(cbar.get_clim()[0], cbar.get_clim()[1], 5, endpoint=True)\n",
     "cbar.set_ticks(ticks)\n",
     "cbar.set_ticklabels(np.round(ticks * 100,1))\n",
-    "cbar.set_label('Trials [%]', labelpad=10, fontsize=14)"
+    "cbar.set_label('Trials [%]', labelpad=10, fontsize=14)\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatShallow.svg', bbox_inches='tight', dpi=600, pad_inches=0)"
    ]
   },
   {
