--- a/notebooks/plots/Perturbation_Plots.ipynb
+++ b/notebooks/plots/Perturbation_Plots.ipynb
@@ -43,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -93,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "amp_pred_corrs, orig_acc, new_accs = np.load('data/models/pytorch/auto-diag/6000-input/21/gaussian.perturbation.30.npy')\n",
@@ -103,26 +99,10 @@
     "\n",
     "fs = 100.0\n",
     "freqs = np.fft.rfftfreq(6000, d=1.0/fs)\n",
-    "assert freqs.shape[0] == mean_corr.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "freq_start_stops = ((0,4), (4,8),(8,14),(14,20), (20,30),(30,50))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "assert freqs.shape[0] == mean_corr.shape[1]\n",
+    "\n",
+    "freq_start_stops = ((0,4), (4,8),(8,14),(14,20), (20,30),(30,50))\n",
+    "\n",
     "from braindecode.visualization.plot import ax_scalp\n",
     "from autodiag.plot import add_colorbar_to_scalp_grid\n",
     "plt.plot(freqs, np.mean(mean_corr, axis=0)[:,1])\n",
@@ -138,7 +118,8 @@
     "    ax_scalp(freq_corr[:,1], ch_names, chan_pos_list=POS_APPROX, cmap=cm.coolwarm,\n",
     "            vmin=-0.005, vmax=0.005, ax=ax,annotate=True)\n",
     "    ax.set_title(u\"{:d}—{:d} Hz\".format(freq_start, freq_stop))\n",
-    "add_colorbar_to_scalp_grid(fig, axes, \"Correlation\", min_max_ticks=False)"
+    "add_colorbar_to_scalp_grid(fig, axes, \"Correlation\", min_max_ticks=False, shrink=0.6)\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/PerturbationDeep.pdf', bbox_inches='tight', dpi=600, pad_inches=0)"
    ]
   },
   {
@@ -154,15 +135,9 @@
     "freqs = np.fft.rfftfreq(6000, d=1.0/fs)\n",
     "assert freqs.shape[0] == mean_corr.shape[1]\n",
     "\n",
-    "print(open('data/models/pytorch/auto-diag/6000-input/22/config.json', 'r').read())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(open('data/models/pytorch/auto-diag/6000-input/22/config.json', 'r').read())\n",
+    "\n",
+    "\n",
     "from braindecode.visualization.plot import ax_scalp\n",
     "plt.plot(freqs, np.mean(mean_corr, axis=0)[:,1])\n",
     "plt.xlabel('Freq [Hz]')\n",
@@ -177,7 +152,8 @@
     "    ax_scalp(freq_corr[:,1], ch_names, chan_pos_list=POS_APPROX, cmap=cm.coolwarm,\n",
     "            vmin=-0.005, vmax=0.005, ax=ax,annotate=True)\n",
     "    ax.set_title(u\"{:d}—{:d} Hz\".format(freq_start, freq_stop))\n",
-    "add_colorbar_to_scalp_grid(fig, axes, \"Correlation\", min_max_ticks=False)"
+    "add_colorbar_to_scalp_grid(fig, axes, \"Correlation\", min_max_ticks=False, shrink=0.6)\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/PerturbationShallow.pdf', bbox_inches='tight', dpi=600, pad_inches=0)"
    ]
   },
   {
