--- a/notebooks/plots/Prediction_Less_Test_Time.ipynb
+++ b/notebooks/plots/Prediction_Less_Test_Time.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_input = np_to_var(np.ones((2,21,601,1), dtype=np.float32)).cuda()"
@@ -159,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from braindecode.models.shallow_fbcsp import ShallowFBCSPNet\n",
