--- a/notebooks/plots/Prediction_Reports.ipynb
+++ b/notebooks/plots/Prediction_Reports.ipynb
@@ -83,30 +83,8 @@
    },
    "outputs": [],
    "source": [
-    "trial_preds = np.load('data/models/pytorch/auto-diag/6000-input/21/test_trial_preds.npy')\n",
-    "trial_labels = np.load('data/models/pytorch/auto-diag/6000-input/21/test_trial_labels.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "correct_mask = np.argmax(trial_preds, axis=1) == trial_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from autodiag.dataset import get_all_sorted_file_names_and_labels"
+    "from autodiag.dataset import get_all_sorted_file_names_and_labels\n",
+    "from autodiag.count_words import compute_counts_and_relative_frequencies, compute_imprs_word_counts"
    ]
   },
   {
@@ -128,8 +106,18 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from autodiag.count_words import compute_counts_and_relative_frequencies"
+    "\n",
+    "result = compute_counts_and_relative_frequencies(file_names, np.zeros(len(labels)),\n",
+    "                                                 correct_mask=labels == 0,\n",
+    "                                       label=0)"
    ]
   },
   {
@@ -138,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum(list(result.incorrect_counter.values()))"
+    "n_words = sum(list(result.incorrect_counter.values()))"
    ]
   },
   {
@@ -147,7 +135,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sum(list(result.correct_counter.values()))"
+    "all_words_freqs = [(word, result.incorrect_counter[word] / float(n_words)) for word in result.incorrect_counter]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "all_words_freqs = sorted(all_words_freqs, key=lambda t: t[1])"
    ]
   },
   {
@@ -156,7 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1 / 0.004761904761904762"
+    "for word, freq in all_words_freqs[::-1][:10]:\n",
+    "    print(word, freq)"
    ]
   },
   {
@@ -165,7 +165,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.incorrect_counter['sleep'] / 630"
+    "\n",
+    "\n",
+    "print(\"\\n ----------------------------------------------\\n\")\n",
+    "for key, rel_freq in result.freq_ratios[::-1][:20]:\n",
+    "    if rel_freq < 3:\n",
+    "        break\n",
+    "    print(\"{:20s} {:5.2f} {:d} {:d}\".format(key, rel_freq, \n",
+    "                                            result.correct_counter[key] > 0,\n",
+    "                                            result.incorrect_counter[key] > 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### incorrect vs correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trial_preds = np.load('data/models/pytorch/auto-diag/6000-input/21/test_trial_preds.npy')\n",
+    "trial_labels = np.load('data/models/pytorch/auto-diag/6000-input/21/test_trial_labels.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "correct_mask = np.argmax(trial_preds, axis=1) == trial_labels"
    ]
   },
   {
@@ -176,7 +214,7 @@
    "source": [
     "print(str(sum(~correct_mask & (labels == 1))) + \" errors\\n\")\n",
     "\n",
-    "result = compute_counts_and_relative_frequencies(file_names, labels,correct_mask=correct_mask,\n",
+    "result = compute_counts_and_relative_frequencies(file_names, labels, correct_mask=correct_mask,\n",
     "                                       label=1)\n",
     "\n",
     "for key, rel_freq in result.freq_ratios:\n",
