post-paper push for deep4 with stride before pool etc

--- a/notebooks/plots/Prediction_Reports.ipynb
+++ b/notebooks/plots/Prediction_Reports.ipynb
@@ -111,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -123,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_words = sum(list(result.incorrect_counter.values()))"
@@ -132,7 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_words_freqs = [(word, result.incorrect_counter[word] / float(n_words)) for word in result.incorrect_counter]"
@@ -396,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
