--- a/notebooks/MultiPathNet.ipynb
+++ b/notebooks/MultiPathNet.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "import torch as th\n"
+    "import torch as th"
    ]
   },
   {
@@ -214,8 +214,7 @@
     "            x, fs = preproc_fn(x, fs)\n",
     "        new_X.append(x)\n",
     "    the_set.X = new_X\n",
-    "    return the_set\n",
-    "        "
+    "    return the_set"
    ]
   },
   {
@@ -227,11 +226,11 @@
    "outputs": [],
    "source": [
     "from braindecode.datautil.signal_target import SignalAndTarget\n",
-    "def create_set(inds):\n",
+    "def create_set(inds, sensor_types):\n",
     "    X = []\n",
     "    for i in inds:\n",
     "        log.info(\"Load {:s}\".format(cleaned_file_names[i]))\n",
-    "        x = load_data(cleaned_file_names[i], preproc_functions)\n",
+    "        x = load_data(cleaned_file_names[i], preproc_functions, sensor_types=sensor_types)\n",
     "        X.append(x)\n",
     "    y = cleaned_labels[inds].astype(np.int64)\n",
     "    return SignalAndTarget(X, y)"
@@ -245,7 +244,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "from autodiag.iterator import ModifiedIterator\n",
     "from autodiag.batch_modifier import RemoveMinMaxDiff\n",
     "\n",
@@ -259,9 +257,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = create_set(train_inds)\n",
-    "valid_set = create_set(valid_inds)\n",
-    "test_set = create_set(test_inds)"
+    "sensor_types = ['EEG', 'EKG']\n",
+    "\n",
+    "train_set = create_set(train_inds, sensor_types)\n",
+    "valid_set = create_set(valid_inds, sensor_types)\n",
+    "test_set = create_set(test_inds, sensor_types)"
    ]
   },
   {
@@ -310,7 +310,7 @@
     "\n",
     "set_random_seeds(seed=20170629, cuda=cuda)\n",
     "input_time_length = 1200\n",
-    "in_chans = 21\n",
+    "in_chans = 22\n",
     "early_bnorm = False\n",
     "extra_conv_stride = 4\n",
     "later_kernel_len = 5\n",
@@ -319,7 +319,6 @@
     "n_start_filters = 10\n",
     "drop_prob = 0.5\n",
     "virtual_chan_1x1_conv = True\n",
-    "in_chans = 21\n",
     "\n",
     "\n",
     "model = create_multi_start_path_net(in_chans=in_chans,\n",
@@ -411,11 +410,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "batch_size = 32\n",
+    "log.info(\"{:d} predictions per input/trial\".format(n_preds_per_input))\n",
+    "iterator = CropsFromTrialsIterator(batch_size=batch_size,\n",
+    "                                   input_time_length=input_time_length,\n",
+    "                                  n_preds_per_input=n_preds_per_input)\n",
+    "\n",
     "init_lr = 0.1\n",
     "\n",
     "n_batches = sum([1 for _ in iterator.get_batches(train_set, shuffle=False)])\n",
@@ -426,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
@@ -440,12 +446,7 @@
     "from braindecode.experiments.stopcriteria import MaxEpochs\n",
     "\n",
     "optimizer = optim.SGD(model.parameters(), momentum=momentum, lr=init_lr)\n",
-    "batch_size = 32\n",
-    "log.info(\"{:d} predictions per input/trial\".format(n_preds_per_input))\n",
-    "iterator = CropsFromTrialsIterator(batch_size=batch_size,\n",
-    "                                   input_time_length=input_time_length,\n",
-    "                                  n_preds_per_input=n_preds_per_input)\n",
-    "loss_function = lambda preds, targets: F.nll_loss(th.mean(preds, dim=2)[:,:,0],\n",
+    "loss_function = lambda preds, targets: F.nll_loss(th.mean(preds, dim=2, keepdim=False),\n",
     "                                                  targets)\n",
     "model_constraint = None\n",
     "monitors = [LossMonitor(), MisclassMonitor(col_suffix='sample_misclass'),\n",
@@ -568,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
