changing to 2.0.0 etc

--- a/notebooks/MultiPathNet.ipynb
+++ b/notebooks/MultiPathNet.ipynb
@@ -413,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from braindecode.datautil.iterators import CropsFromTrialsIterator\n",
     "batch_size = 32\n",
     "log.info(\"{:d} predictions per input/trial\".format(n_preds_per_input))\n",
     "iterator = CropsFromTrialsIterator(batch_size=batch_size,\n",
@@ -479,7 +479,7 @@
    "outputs": [],
    "source": [
     "exp.setup_training()\n",
-    "exp.run_until_early_stop()"
+    "exp.run_until_first_stop()"
    ]
   },
   {
@@ -569,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
