--- a/notebooks/plots/Confusion Matrices.ipynb
+++ b/notebooks/plots/Confusion Matrices.ipynb
@@ -28,7 +28,6 @@
     "import matplotlib.lines as mlines\n",
     "import seaborn\n",
     "seaborn.set_style('darkgrid')\n",
-    "matplotlib.rcParams['figure.figsize'] = (12.0, 3.0)\n",
     "import logging\n",
     "import importlib\n",
     "importlib.reload(logging) # see https://stackoverflow.com/a/21475297/1469195\n",
@@ -39,7 +38,9 @@
     "                     level=logging.DEBUG, stream=sys.stdout)\n",
     "from numpy.random import RandomState\n",
     "from braindecode.torch_ext.util import np_to_var\n",
-    "from autodiag.perturbation import combine_covs, combine_vars"
+    "from autodiag.perturbation import combine_covs, combine_vars\n",
+    "plt.style.use('seaborn')\n",
+    "matplotlib.rcParams['figure.figsize'] = (12.0, 3.0)"
    ]
   },
   {
@@ -79,7 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1 "
+    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/revision-eval/', (1,2,17,24,33))\n",
+    "plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Pathological\"), colormap=cm.Reds,\n",
+    "                                  class_names_fontsize=11,\n",
+    "                           vmin=0.05, vmax=0.5);\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatDeep.svg', bbox_inches='tight', dpi=600, pad_inches=0)\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatDeep.pdf', bbox_inches='tight', dpi=600, pad_inches=0)"
    ]
   },
   {
@@ -88,11 +94,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/6000-input', [21,24])\n",
-    "plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Pathological\"), colormap=cm.Reds,\n",
+    "conf_mat = compute_conf_mat('data/models/pytorch/auto-diag/revision-eval/', (5,6,18,19,34))\n",
+    "fig = plot_confusion_matrix_paper(conf_mat, class_names=(\"Normal\", \"Pathological\"), colormap=cm.Reds,\n",
     "                                  class_names_fontsize=11,\n",
     "                           vmin=0.05, vmax=0.5);\n",
-    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatDeep.svg', bbox_inches='tight', dpi=600, pad_inches=0)"
+    "plt.title(\"\", fontsize=20, y=1.04)\n",
+    "\n",
+    "cbar = plt.colorbar(fig.axes[0].images[0], shrink=0.9)\n",
+    "ticks = np.linspace(cbar.get_clim()[0], cbar.get_clim()[1], 5, endpoint=True)\n",
+    "cbar.set_ticks(ticks)\n",
+    "cbar.set_ticklabels(np.round(ticks * 100,1))\n",
+    "cbar.set_label('Trials [%]', labelpad=10, fontsize=14)\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatShallow.svg', bbox_inches='tight', dpi=600, pad_inches=0)\n",
+    "plt.savefig('/home/schirrmr/code/auto-diagnosis/ConfMatShallow.pdf', bbox_inches='tight', dpi=600, pad_inches=0)"
    ]
   },
   {
@@ -142,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
